--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -136,14 +136,15 @@
        "str"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "italy = \"Italy\"\n",
-    "type(italy)"
+    "type(italy)\n",
+    "top"
    ]
   },
   {
