--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "italy = \"Italy\"\n",
     "type(italy)\n",
-    "'Italy' = top_"
+    "'Italy' = countries()"
    ]
   },
   {
