automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,8 +144,7 @@
    ],
    "source": [
     "italy = \"Italy\"\n",
-    "type(italy)\n",
-    "Italy = countries(-3)"
+    "countries"
    ]
   },
   {
