automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -143,11 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Toronto'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "top_italian_city = top_travel_cities[-2]"
+    "top_italian_city = top_travel_cities[-2]\n",
+    "top_italian_city"
    ]
   },
   {
