automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -143,22 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Toronto'"
+       "'Salina Island'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_italian_city = top_travel_cities[-2]\n",
+    "top_italian_city = top_travel_cities[-3]\n",
     "top_italian_city"
    ]
   },
