automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "top_italian_city = top_travel_cities[-3]\n",
+    "Italy = top_travel_cities[-3]\n",
     "top_italian_city"
    ]
   },
