--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -152,14 +152,14 @@
        "'Salina Island'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Italy = top_travel_cities[-3]\n",
-    "top_italian_city"
+    "Italy = countries[-3]\n",
+    "top_italian_cit"
    ]
   },
   {
