--- a/index.ipynb
+++ b/index.ipynb
@@ -147,7 +147,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Italy = countries [-3]"
+    "Italy = countries [-3]\n",
+    "countries"
    ]
   },
   {
