automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,7 @@
     }
    ],
    "source": [
-    "Italy = countries [-3]\n",
+    "'Italy = countries [-3]\n",
     "countries (-3)"
    ]
   },
