automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -143,22 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Canada'"
+       "'Italy'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries [-2]"
+    "countries [-3]"
    ]
   },
   {
