--- a/index.ipynb
+++ b/index.ipynb
@@ -143,21 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to literal (<ipython-input-53-64ff412576fd>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-53-64ff412576fd>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    'Italy' = countries [-3]\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "countries [-3]\n",
-    "'Italy' = countries [-3]"
+    "Italy = countries [-3]"
    ]
   },
   {
