automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,14 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 56,
+   "metadata": {},
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico"
+    "mexico = co"
    ]
   },
   {
