automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,12 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico = co"
+    "mexico = countries [-4]"
    ]
   },
   {
