automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,14 +177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors"
+    "kindof_neighbors = "
    ]
   },
   {
