--- a/index.ipynb
+++ b/index.ipynb
@@ -177,12 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors = countries[2]"
+    "kindof_neighbors = countries[2:5]\n",
+    "count"
    ]
   },
   {
