automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,22 +213,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Malta = "
+    "Malta = None\n"
    ]
   },
   {
