automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Malta = None\n"
+    "Malta = None\n",
+    "countries.append"
    ]
   },
   {
