--- a/index.ipynb
+++ b/index.ipynb
@@ -213,12 +213,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "Malta = None\n",
-    "countries.append"
+    "countries.append(Malta)"
    ]
   },
   {
