automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
     }
    ],
    "source": [
-    "Malta = None\n",
+    "Malta = ''\n",
     "countries.append(Malta)\n",
     "countries"
    ]
