automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -232,16 +232,17 @@
        " 'Canada',\n",
        " 'South Korea',\n",
        " None,\n",
-       " None]"
+       " None,\n",
+       " 'Malta']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Malta = ''\n",
+    "Malta = 'Malta'\n",
     "countries.append(Malta)\n",
     "countries"
    ]
