automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,30 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
-       " 'Canada',\n",
-       " 'South Korea',\n",
-       " None,\n",
-       " None,\n",
-       " 'Malta']"
+       "<function list.pop>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +230,7 @@
    "source": [
     "Malta = 'Malta'\n",
     "countries.append(Malta)\n",
-    "countries"
+    "countries.pop"
    ]
   },
   {
