automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,16 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function list.pop>"
+       "'Malta'"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
    "source": [
     "Malta = 'Malta'\n",
     "countries.append(Malta)\n",
-    "countries.pop"
+    "countries.pop()"
    ]
   },
   {
