--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "'Malta'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,8 @@
    "source": [
     "Malta = 'Malta'\n",
     "countries.append(Malta)\n",
-    "countries.pop()"
+    "countries.pop()\n",
+    "countries.pop/()"
    ]
   },
   {
