automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "'Malta'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,8 @@
     "Malta = 'Malta'\n",
     "countries.append(Malta)\n",
     "countries.pop()\n",
-    "countries.pop/()"
+    "countries.pop()\n",
+    "countries"
    ]
   },
   {
