--- a/index.ipynb
+++ b/index.ipynb
@@ -213,16 +213,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Malta'"
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " None]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +244,8 @@
     "countries.append(Malta)\n",
     "countries.pop()\n",
     "countries.pop()\n",
-    "countries"
+    "countries\n",
+    "countries.po"
    ]
   },
   {
