automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,28 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
-       " 'Canada',\n",
-       " 'South Korea',\n",
-       " None]"
+       "'South Korea'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +233,7 @@
     "countries.pop()\n",
     "countries.pop()\n",
     "countries\n",
-    "countries.po"
+    "countries.pop()"
    ]
   },
   {
