automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
     "countries.pop()\n",
     "countries.pop()\n",
     "countries\n",
-    "countries.amend()"
+    "countries.append(South)"
    ]
   },
   {
