--- a/index.ipynb
+++ b/index.ipynb
@@ -213,25 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-76-c4b06f945b13>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-76-c4b06f945b13>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    countries.append(South Korea)\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Malta = 'Malta'\n",
     "countries.append(Malta)\n",
     "countries.pop()\n",
     "countries.pop()\n",
     "countries\n",
-    "countries.append(South Korea)"
+    "countries.append('South Korea')"
    ]
   },
   {
