automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,16 +213,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'South Korea']"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Malta = 'Malta'\n",
     "countries.append(Malta)\n",
     "countries.pop()\n",
     "countries.pop()\n",
     "countries\n",
-    "countries.append('South Korea')"
+    "countries.append('South Korea')\n",
+    "countries"
    ]
   },
   {
