--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        " 'South Korea']"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,8 @@
     "countries.pop()\n",
     "countries\n",
     "countries.append('South Korea')\n",
-    "countries"
+    "countries\n",
+    "countries.append"
    ]
   },
   {
