--- a/index.ipynb
+++ b/index.ipynb
@@ -213,29 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'South Korea']"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Malta = 'Malta'\n",
     "countries.append(Malta)\n",
@@ -244,7 +224,7 @@
     "countries\n",
     "countries.append('South Korea')\n",
     "countries\n",
-    "countries.append"
+    "countries.append('Malta')"
    ]
   },
   {
