automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,13 +236,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 81,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "Thailand = ''"
+    "Thailand = 'Thailand'\n",
+    "countries.append"
    ]
   },
   {
