automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,12 +236,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "Thailand = 'Thailand'\n",
-    "countries.append"
+    "countries.append('Thailand')"
    ]
   },
   {
