--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,8 @@
    "outputs": [],
    "source": [
     "Thailand = 'Thailand'\n",
-    "countries.append('Thailand')"
+    "countries.append('Thailand')\n",
+    "countries"
    ]
   },
   {
