automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,28 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Thailand',\n",
-       " 'Thailand']"
+       "'Thailand'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +253,7 @@
    "source": [
     "Thailand = 'Thailand'\n",
     "countries.append('Thailand')\n",
-    "countries"
+    "countries.pop()\n"
    ]
   },
   {
