--- a/index.ipynb
+++ b/index.ipynb
@@ -236,16 +236,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Thailand'"
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +265,8 @@
    "source": [
     "Thailand = 'Thailand'\n",
     "countries.append('Thailand')\n",
-    "countries.pop()\n"
+    "countries.pop()\n",
+    "countries"
    ]
   },
   {
