automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -257,16 +257,14 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Thailand = 'Thailand'\n",
-    "countries.append('Thailand')\n",
-    "countries.pop()\n",
-    "countries"
+    "countries."
    ]
   },
   {
