automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,35 +236,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Thailand',\n",
-       " 'Thailand']"
+       "'Thailand'"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Thailand = 'Thailand'\n",
-    "countries."
+    "countrie()"
    ]
   },
   {
