--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[6] = \"USA\""
+    "countries[6] = \"USA\"\n",
+    "co"
    ]
   },
   {
