automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,12 +295,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thailand'"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries[6] = \"USA\"\n",
-    "co"
+    "countries.pop()"
    ]
   },
   {
