automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,13 +405,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "uniqu"
    ]
   },
   {
