automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,13 +405,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "uniqu"
+    "unique_countries = list\n",
+    "len(unique_)"
    ]
   },
   {
