--- a/index.ipynb
+++ b/index.ipynb
@@ -405,28 +405,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 107,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": [
-    "unique_countries = list\n",
-    "len(unique_)"
-   ]
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'type' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-107-82dcf3763669>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munique_countries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'type' has no len()"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "set"
+       "list"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
