--- a/index.ipynb
+++ b/index.ipynb
@@ -405,24 +405,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 109,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "object of type 'type' has no len()",
+     "evalue": "'type' object is not iterable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-107-82dcf3763669>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munique_countries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'type' has no len()"
+      "\u001b[0;32m<ipython-input-109-4f1400f26899>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_countries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munique_countries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'type' object is not iterable"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "unique_countries = list(unique_countries)"
+   ]
   },
   {
    "cell_type": "code",
