automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 115,
    "metadata": {
     "scrolled": true
    },
@@ -413,16 +413,16 @@
     {
      "data": {
       "text/plain": [
-       "type"
+       "list"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type (unique_countries)"
+    "unique_countries"
    ]
   },
   {
