automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,24 +405,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 116,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-116-ddf9ab1795fe>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-116-ddf9ab1795fe>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    #'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
    "source": [
-    "unique_countries"
+    "'unique_countries = ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
+    "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
    ]
   },
   {
