automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,28 +405,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 120,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-116-ddf9ab1795fe>, line 2)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-120-c8be98757e9b>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-116-ddf9ab1795fe>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    #'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-120-c8be98757e9b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    #'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
    "source": [
-    "'unique_countries = ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
+    "'unique_countries' = ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
     "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "list"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
