--- a/index.ipynb
+++ b/index.ipynb
@@ -420,8 +420,8 @@
     }
    ],
    "source": [
-    "'unique_countries' = ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
-    "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
+    "'unique_countries' = ()Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
+    "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea'"
    ]
   },
   {
