--- a/index.ipynb
+++ b/index.ipynb
@@ -416,23 +416,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "tuple"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_countries # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
-    "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
+    "type (unique_countries)"
    ]
   },
   {
