automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,22 +416,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tuple"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-127-a5812f9ec555>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-127-a5812f9ec555>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    (unique_countries) type\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "type (unique_countries)"
+    "type(unique_countries)"
    ]
   },
   {
