automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,22 +416,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tuple"
+       "11"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(unique_count)"
+    "len(unique_countries)\n",
+    "len(countries)\n"
    ]
   },
   {
@@ -449,7 +450,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = None\n",
+    "num_of_repeats = ldn\n",
     "num_of_repeats # 3"
    ]
   },
