--- a/index.ipynb
+++ b/index.ipynb
@@ -444,22 +444,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1"
+       "1"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_countries) - len(countries)\n",
+    "num_of_repeats = len(countries) - len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
