--- a/index.ipynb
+++ b/index.ipynb
@@ -416,16 +416,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11"
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'USA',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'South Korea',\n",
+       " 'Malta']"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
