--- a/index.ipynb
+++ b/index.ipynb
@@ -454,23 +454,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "3"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "num_of_repeats = len(countries) - len(unique_countries)\n",
-    "num_of_repeats "
+    "num_of_repeats = 3\n",
+    "num_of_repeats"
    ]
   },
   {
