--- a/index.ipynb
+++ b/index.ipynb
@@ -454,24 +454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num_of_repeats = len(countries) - len(unique_countries)\n",
-    "num_of_repeats = 3\n",
-    "num_of_repeats"
+    "num_of_repeats = len(countries) - len(unique_countries)"
    ]
   },
   {
